tests/should_fail/match_non_exhaustive_option.nv
// should_fail: Non-exhaustive Option match (only Some, missing None)
module match_non_exhaustive_option
fn bad(o: Option(Int)) -> Int {
    return match o {
        Some(v) => v
    }
}
